name:                haskell-docs
version:             4.0.0
synopsis:            A program to find and display the docs of a name from a
                     given module.
description:         Given a module name and a name, it will find and display
                     the documentation of that name.
                     .
                     /EXAMPLE USAGE/
                     .
                     > $ haskell-docs Data.List.Split split
                     > split :: forall a. Splitter a -> [a] -> [[a]]
                     > Split a list according to the given splitting strategy. This is
                     >  how to "run" a Splitter that has been built using the other
                     >  combinators.
                     .
                     /INSTALLATION/
                     .
                     You should ensure that you have
                     .
                     > documentation: True
                     .
                     in your .cabal/config so that the necessary
                     .haddock files are generated.
                     .
                     Haddock is very sensitive to the GHC version. This program tries not to be. If
                     you cannot install this package due to a version problem, open a Github issue.
                     If the versions match up but the build fails, open a Github issue. Neither
                     case should arise.
                     .
                     /USING WITH GHCI/
                     .
                     > > :def doc \input -> return (":!haskell-docs " ++ input)
                     > > :doc System.IO getContents base
                     > The getContents operation returns all user input as a single string,
                     >  which is read lazily as it is needed
                     >  (same as hGetContents stdin).
                     .
                     Add the above :def to your user .ghci to have it on start-up.
                     .
                     /CONTRIBUTION AND ISSUES/
                     .
                     Issues\/ideas\/contributions please make a Github issue: <http://github.com/chrisdone/haskell-docs/issues>
                     .
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8
Homepage:            http://github.com/chrisdone/haskell-docs
Bug-Reports:         http://github.com/chrisdone/haskell-docs/issues

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Docs,
                       Haskell.Docs.Ghc,
                       Haskell.Docs.Formatting,
                       Haskell.Docs.Haddock,
                       Haskell.Docs.Types
  build-depends:       base > 4 && < 5,
                       ghc >= 7.2 && < 7.9,
                       ghc-paths,
                       containers,
                       monad-loops,
                       optparse-applicative
  if impl(ghc==7.8.*)
    build-depends: haddock==2.14.*
  if impl(ghc==7.6.*)
    build-depends: haddock==2.13.*
  if impl(ghc==7.4.*)
    build-depends: haddock==2.11.*
  if impl(ghc==7.2.*)
    build-depends: haddock==2.9.*

  if impl(ghc>=7.8)
    build-depends: haddock
  if impl(ghc<7.2)
    build-depends: haddock

executable haskell-docs
  hs-source-dirs:      src/main
  main-is:             Main.hs
  build-depends:       base > 4 && < 5,
                       haskell-docs,
                       optparse-applicative

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: src/test
    build-depends: base,
                   haskell-docs

source-repository head
  type:        git
  location:    git://github.com/chrisdone/haskell-docs.git
