name:                haskell-docs
version:             4.2.7
synopsis:            A program to find and display the docs and type of a name
description:         Given a module name and a name, or just a name, it will find and display
                     the documentation of that name.
                     .
                     /EXAMPLE USAGE/
                     .
                     > $ haskell-docs hSetBuffering
                     > Package: base
                     > Module: GHC.IO.Handle
                     > hSetBuffering :: Handle -> BufferMode -> IO ()
                     > Computation hSetBuffering `hdl mode` sets the mode of buffering for
                     >  handle `hdl` on subsequent reads and writes.
                     .
                     /INSTALLATION/
                     .
                     You should ensure that you have
                     .
                     > documentation: True
                     .
                     in your .cabal/config so that the necessary
                     .haddock files are generated.
                     .
                     Haddock is very sensitive to the GHC version. This program tries not to be. If
                     you cannot install this package due to a version problem, open a Github issue.
                     If the versions match up but the build fails, open a Github issue. Neither
                     case should arise.
                     .
                     /USING WITH GHCI/
                     .
                     > > :def doc \input -> return (":!haskell-docs " ++ input)
                     > > :doc getContents
                     > The getContents operation returns all user input as a single string,
                     >  which is read lazily as it is needed
                     >  (same as hGetContents stdin).
                     .
                     Add the above :def to your user .ghci to have it on start-up.
                     .
                     /CONTRIBUTION AND ISSUES/
                     .
                     Issues\/ideas\/contributions please make a Github issue: <http://github.com/ivan-m/haskell-docs/issues>
                     .
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
Tested-With:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
                     GHC == 7.10.2, GHC == 8.0.1, GHC == 8.1.*
cabal-version:       >=1.8
Homepage:            http://github.com/ivan-m/haskell-docs
Bug-Reports:         http://github.com/ivan-m/haskell-docs/issues
extra-source-files:
  src/Haskell/Docs.hs
  src/Haskell/Docs/Ghc.hs
  src/Haskell/Docs/Cabal.hs
  src/Haskell/Docs/Formatting.hs
  src/Haskell/Docs/Haddock.hs
  src/Haskell/Docs/Types.hs
  src/Haskell/Docs/Index.hs
  src/haddock/Haskell/Docs/HaddockDoc.hs
  src/haddock-api/Haskell/Docs/HaddockDoc.hs

library
  ghc-options:         -Wall
  if impl(ghc>=7.8.4)
    hs-source-dirs: src, src/haddock-api
  if impl(ghc<7.8.4)
    hs-source-dirs: src, src/haddock
  exposed-modules:     Haskell.Docs,
                       Haskell.Docs.Ghc,
                       Haskell.Docs.Cabal,
                       Haskell.Docs.Formatting,
                       Haskell.Docs.Haddock,
                       Haskell.Docs.Types,
                       Haskell.Docs.Index,
                       Haskell.Docs.HaddockDoc
  build-depends:       Cabal
                     , aeson
                     , base > 4 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , ghc >= 7.4 && < 8.1
                     , ghc-paths
                     , monad-loops
                     , process
                     , text
                     , text
                     , unordered-containers
  if impl(ghc==8.0.*)
     build-depends:   haddock-api==2.17.*
                    , haddock-library
  if impl(ghc==7.10.*)
     build-depends:   haddock-api==2.16.*
                    , haddock-library
  if impl(ghc==7.8.4)
    build-depends:    haddock-api==2.15.*
                    , haddock-library
  if impl(ghc==7.8.3)
    build-depends: haddock==2.14.*
  if impl(ghc==7.6.*)
    build-depends: haddock==2.13.*
  if impl(ghc==7.4.*)
    build-depends: haddock==2.11.*

  if impl(ghc>=7.8.4)
    build-depends: haddock-api

executable haskell-docs
  hs-source-dirs:      src/main
  main-is:             Main.hs
  build-depends:       text,
                       base > 4 && < 5,
                       haskell-docs,
                       ghc

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: src/test
    build-depends: base,
                   haskell-docs

source-repository head
  type:        git
  location:    git://github.com/ivan-m/haskell-docs.git
